<resources>
    <string name="app_name">COMonitoring</string>
    <string name="refreshButton">Refresh</string>
    <string name="sensorValueTextView">Sensor Value</string>
    <string name="backButton">Back</string>
    <string name="sendTestEmail">Send Test Emails</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="sing_in_string">Sing In</string>
    <string name="email_string">Email</string>
    <string name="email_value">Email</string>
    <string name="emailSettings">Settings</string>
    <string name="changeEmailAddress">Set/change the email address</string>
    <string name="coValue"> CO VALUE:</string>
    <string name="contactPoint">Contact Point</string>
    <string name="mailSubject">Email Subject</string>
    <string name="mailMessage">Email Message</string>
    <string name="chartButton">Chart</string>
    <string name="log_in">Log In</string>
    <string name="display_data">Display Data</string>
    <string name="history">Mail History</string>
    <string name="contact">Contact</string>
    <string name="register">Register</string>
    <string name="counted_values">Counted Values</string>
    <string name="log_in_string">Log In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="setTheValues"> Set </string>
    <string name="dateOfTheMail"> Date </string>
    <string name="threshold"> Threshold </string>
    <string name="emailSwitch">Turn off Emails</string>
    <string name="idTextView"> ID</string>
    <string name="sendButton"> Send Email</string>
    <string name= "EvaluationTime"> Evaluation Time(Sec)</string>
</resources>